; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_llist.c_Curl_llist_destroy.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_llist.c_Curl_llist_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_llist = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Curl_llist_destroy(%struct.curl_llist* %0, i8* %1) #0 {
  %3 = alloca %struct.curl_llist*, align 8
  %4 = alloca i8*, align 8
  store %struct.curl_llist* %0, %struct.curl_llist** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.curl_llist*, %struct.curl_llist** %3, align 8
  %6 = icmp ne %struct.curl_llist* %5, null
  br i1 %6, label %7, label %21

7:                                                ; preds = %2
  br label %8

8:                                                ; preds = %13, %7
  %9 = load %struct.curl_llist*, %struct.curl_llist** %3, align 8
  %10 = getelementptr inbounds %struct.curl_llist, %struct.curl_llist* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %8
  %14 = load %struct.curl_llist*, %struct.curl_llist** %3, align 8
  %15 = load %struct.curl_llist*, %struct.curl_llist** %3, align 8
  %16 = getelementptr inbounds %struct.curl_llist, %struct.curl_llist* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @Curl_llist_remove(%struct.curl_llist* %14, i32 %17, i8* %18)
  br label %8

20:                                               ; preds = %8
  br label %21

21:                                               ; preds = %20, %2
  ret void
}

declare dso_local i32 @Curl_llist_remove(%struct.curl_llist*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
